--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
+    "mongoose-slug-updater": "^3.3.0",
     "nodemon": "^3.0.1"
   }
 }
