--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 PORT = 3001
 
-MONGO_DB=mongodb+srv://tuthanhthoai:thanhthoai123@cluster0.yqd2pr9.mongodb.net/?retryWrites=true&w=majority
+MONGO_DB=mongodb+srv://dbUser:dbPassword@cluster0.drpjskz.mongodb.net/?retryWrites=true&w=majority
 
 ACCESS_TOKEN = access_token
 REFRESH_TOKEN = refresh_token
+
+ALLOW_ORIGIN = http://localhost:3000
